# qoiview

./: .gitignore  CMakeLists.txt  LICENSE  README.md  baboon.qoi  qoiview.c  qoiview.html  qoiview.js  qoiview.wasm  shell.html
.github/workflows/: main.yml
images/: baboon.qoi  dice.qoi  testcard.qoi  testcard_rgba.qoi
sokol/: shell.html  update.sh
